# asmgrader

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile.aarch64  LICENSE  Makefile  README.md  TODO-prof-mode.md  TODO.md  build.sh  debug.sh  lint.sh  test.sh
.github/actions/setup_cache/: action.yml
.github/workflows/: ci.yml  docs.yml  test-report.yml
cmake/: AddAsmArchImpl.cmake  Cache.cmake  CompilerWarnings.cmake  Doxygen.cmake  GitVersionInfo.cmake  GitVersionTag.cmake  PreventInSourceBuilds.cmake  ProjectOptions.cmake  Sanitizers.cmake  SetupDependencies.cmake  StandardProjectSettings.cmake  aarch64-toolchain.cmake
cmake/patches/: boost-pfr-system.patch
core/: CMakeLists.txt  api.hpp  config.hpp.in  database_reader.cpp  database_reader.hpp  elfio-system.patch  exceptions.hpp  grading_session.hpp  logging.hpp  macros.hpp  main.cpp  multi_student_runner.cpp  multi_student_runner.hpp  test_context.cpp  test_context.hpp  test_runner.cpp  test_runner.hpp  version.hpp.in
core/api/: asm_buffer.hpp  asm_data.hpp  asm_function.hpp  asm_symbol.hpp  assignment.cpp  assignment.hpp  macros.hpp  metadata.hpp  registers_state.cpp  registers_state.hpp  test_base.hpp  test_context.cpp  test_context.hpp
core/app/: app.hpp  professor_app.cpp  professor_app.hpp  student_app.cpp  student_app.hpp  trace_exception.hpp
core/common/: aliases.hpp  byte_array.hpp  byte_vector.hpp  class_traits.hpp  error_types.hpp  expected.hpp  extra_formatters.hpp  functional.hpp  linux.hpp  macros.hpp  os.hpp  static_string.hpp  terminal_checks.cpp  terminal_checks.hpp  unreachable.hpp
core/common/formatters/: aggregate.hpp  debug.hpp  enum.hpp  formatters.hpp  generic_impl.hpp  std.hpp  unknown.hpp
core/meta/: always_false.hpp  compatible_function_args.hpp  count_if.hpp  functional_traits.hpp  integer.hpp  remove_all_pointers.hpp  tuple_matcher.hpp
core/output/: plaintext_serializer.cpp  plaintext_serializer.hpp  serializer.hpp  sink.hpp  stdout_sink.cpp  stdout_sink.hpp  verbosity.hpp
core/program/: program.cpp  program.hpp
core/registrars/: auto_registrars.hpp  global_registrar.cpp  global_registrar.hpp
core/serializers/: serializer.hpp
core/subprocess/: run_result.cpp  run_result.hpp  subprocess.cpp  subprocess.hpp  syscall.hpp  syscall_entries.inl  syscall_record.hpp  traced_subprocess.cpp  traced_subprocess.hpp  tracer.cpp  tracer.hpp  tracer_types.hpp
core/subprocess/memory/: concepts.hpp  memory_io.hpp  memory_io_base.cpp  memory_io_base.hpp  memory_io_serde.hpp  non_terminated_str.hpp  ptrace_memory_io.cpp  ptrace_memory_io.hpp
core/symbols/: elf_reader.cpp  elf_reader.hpp  symbol.hpp  symbol_table.cpp  symbol_table.hpp
core/test/: asm_buffer.hpp  asm_data.hpp  asm_function.hpp  asm_symbol.hpp  assignment.cpp  assignment.hpp  test_base.hpp
core/user/: assignment_file_searcher.cpp  assignment_file_searcher.hpp  cl_args.cpp  cl_args.hpp  file_searcher.cpp  file_searcher.hpp  program_options.hpp
core/util/: byte_array.hpp  byte_vector.cpp  byte_vector.hpp  class_traits.hpp  error_types.hpp  expected.hpp  extra_formatters.hpp  linux.hpp  terminal_checks.cpp
doc/: CLI-USAGE.md  DEVELOPING.md  doxygen-awesome-fragment-copy-button-modified.js
docs/: CLI-USAGE.md  header.html
hooks/: post-checkout  pre-push
include/asmgrader/: asmgrader.hpp  exceptions.hpp  grading_session.hpp  logging.hpp
include/asmgrader/api/: asm_buffer.hpp  asm_data.hpp  asm_function.hpp  asm_symbol.hpp  assignment.hpp  decomposer.hpp  expr_inspection.hpp  expression_inspection.hpp  macros.hpp  metadata.hpp  registers_state.hpp  requirement.hpp  stringize.hpp  stringize_fwd.hpp  syntax_highlighter.hpp  test_base.hpp  test_context.hpp  test_macros.hpp
include/asmgrader/common/: aliases.hpp  bit_casts.hpp  byte.hpp  byte_array.hpp  byte_vector.hpp  cconstexpr.hpp  error_types.hpp  expected.hpp  extra_formatters.hpp  linux.hpp  macros.hpp  os.hpp  overloaded.hpp  pair.hpp  static_string.hpp  timespec_operator_eq.hpp  to_static_range.hpp  unreachable.hpp
scripts/: debug.sh  install-hooks.sh  lint.sh
src/: CMakeLists.txt  database_reader.cpp  logging.hpp  main.cpp  multi_student_runner.cpp  multi_student_runner.hpp  test_runner.cpp  test_runner.hpp  version.hpp.in
src/api/: assignment.cpp  stringize.cpp  syntax_highlighter.cpp  test_context.cpp
src/app/: professor_app.cpp  professor_app.hpp  student_app.cpp  student_app.hpp  trace_exception.hpp
src/common/: terminal_checks.cpp  terminal_checks.hpp  time.hpp
src/output/: plaintext_serializer.cpp  plaintext_serializer.hpp  serializer.hpp  stdout_sink.hpp  verbosity.hpp
src/program/: program.cpp
src/registrars/: global_registrar.cpp
src/subprocess/: run_result.cpp  subprocess.cpp  subprocess.hpp  syscall.hpp  syscall_entries.inl  traced_subprocess.cpp  tracer.cpp  tracer.hpp  tracer_types.hpp
src/subprocess/memory/: memory_io_base.cpp  ptrace_memory_io.cpp  ptrace_memory_io.hpp
src/symbols/: elf_reader.cpp  elf_reader.hpp
src/user/: assignment_file_searcher.cpp  assignment_file_searcher.hpp  cl_args.cpp  cl_args.hpp  file_searcher.cpp  file_searcher.hpp  program_options.hpp
src/util/: class_traits.hpp  expected.hpp  extra_formatters.hpp  linux.hpp
test/: CMakeLists.txt  simple_asm_aarch64.s  simple_asm_x86_64.s  test_expected.cpp  test_memory_io.cpp  test_program.cpp  test_subprocess.cpp
tests/: .clang-tidy  .clangd  CMakeLists.txt  bad_field.csv  catch2_custom.hpp  catch_main.cpp  dumb_assignment.cpp  test_bit_casts.cpp  test_byte_ranges.cpp  test_cconstexpr.cpp  test_database_reader.cpp  test_expected.cpp  test_expr_inspection.cpp  test_expression_inspection.cpp  test_file_searcher.cpp  test_formatters.cpp  test_memory_io.cpp  test_metadata.cpp  test_program.cpp  test_registers_state.cpp  test_static_byte.cpp  test_static_expected.cpp  test_static_string.cpp  test_static_tuple_matcher.cpp  test_subprocess.cpp  test_symbol_reader.cpp  test_syntax_highlighter.cpp
tests/resources/: crlf_database.csv  small_database.csv
(+36 files in other folders)
